<resources>
    <string name="app_name">My Fitness Plan</string>
    <string name="recipes">Recipes</string>
    <string name="exercises_plans">Exercises Plans</string>
    <string name="calendar">Calendar</string>
    <string name="timer">Timer</string>
    <string name="progression">Progression</string>
    <string name="charts">Charts</string>
    <string name="settings">Settings</string>
    <string name="general">General</string>
    <string name="enable_notifications">Enable Notifications</string>
    <string name="receive_notifications_about_your_fitness_plan">Receive notifications about your fitness plan.</string>
    <string name="language">Language</string>
    <string name="choose_your_preferred_language">Choose your preferred language</string>
    <string name="theme">Theme</string>
    <string name="choose_the_app_theme">Choose the app theme</string>
    <string name="data_management">Data Management</string>
    <string name="backup_data">Backup Data</string>
    <string name="save_a_copy_of_your_app_data">Save a copy of your app data.</string>
    <string name="restore_data">Restore Data</string>
    <string name="restore_your_app_data_from_a_backup">Restore your app data from a backup.</string>
    <string name="please_enter_a_duration">Please enter a duration</string>
    <string name="duration_must_be_greater_than_0">Duration must be greater than 0</string>
    <string name="weight_progression">Weight Progression</string>
    <string name="calorie_intake_vs_burned">Calorie Intake vs. Burned</string>
    <string name="add_new_ingredient">Add New Ingredient</string>
    <string name="add">Add</string>
    <string name="cancel">Cancel</string>
    <string name="please_fill_all_fields">Please fill all fields</string>
    <string name="please_enter_recipe_name">Please enter recipe name</string>
    <string name="please_enter_total_calories">Please enter total calories</string>
    <string name="please_enter_cooking_steps">Please enter cooking steps</string>
    <string name="please_select_at_least_one_ingredient">Please select at least one ingredient</string>
    <string name="recipe_saved_successfully">Recipe saved successfully</string>
    <string name="consumed_burned_format">Consumed: %.2f | Burned: %.2f</string>
    <string name="backup_file_name">backup.db</string>
    <string name="database_name">my_fitness_plan.db</string>
    <string name="backup_successful">Backup successful</string>
    <string name="backup_failed">Backup Error</string>
    <string name="restore_successful">Restore Successfully</string>
    <string name="restore_failed">Restore Failed</string>
    <string name="weight">weight</string>
    <string name="fat_percent">Fat Percentage</string>
    <string name="muscle_percent">Muscle Percent</string>
    <string name="fitness_app">Fitness App</string>
    <string name="recipesText">Recipes</string>
    <string name="exercises_plans_Text">Exercises Plans</string>
    <string name="calendar_text">Calendar</string>
    <string name="timer_text">Timer</string>
    <string name="progression_text">Progression</string>
    <string name="charts_text">Charts</string>
    <string name="settings_text">Settings</string>
    <string name="calories_consumed_text">Calories Consumed</string>
    <string name="calories_burned_text">Calories Burned</string>
    <string name="plan_name">Plan Name</string>
    <string name="exercises">Exercises:</string>
    <string name="add_new_exercise">Add New Exercise</string>
    <string name="save_plan">Save Plan</string>
    <string name="select_exercise_plan_to_add">Select Exercise Plan to Add</string>
    <string name="cancel_text">Cancel</string>
    <string name="recipe_name">Recipe Name</string>
    <string name="total_calories">Total Calories</string>
    <string name="cooking_steps">Cooking Steps</string>
    <string name="ingredients">Ingredients:</string>
    <string name="add_new_ingredient_text">Add New Ingredient</string>
    <string name="save_recipe">Save Recipe</string>
    <string name="select_recipe_to_add">Select Recipe to Add</string>
    <string name="add_recipe_to_day">Add Recipe to Day</string>
    <string name="add_exercise_plan_to_day">Add Exercise Plan to Day</string>
    <string name="recipes_for_this_day">Recipes for this day:</string>
    <string name="exercises_for_this_day">Exercises for this day:</string>
    <string name="exercises_text">Exercises:</string>
    <string name="search_exercise_plans">Search exercise plans...</string>
    <string name="add_new_exercise_plan">Add New Exercise Plan</string>
    <string name="track_your_progression">Track Your Progression</string>
    <string name="weight_kg">Weight (kg)</string>
    <string name="muscle">Muscle %</string>
    <string name="fat">Fat %</string>
    <string name="select_photo">Select Photo</string>
    <string name="save_progression">Save Progression</string>
    <string name="ingredients_text">Ingredients:</string>
    <string name="search_recipes">Search recipes...</string>
    <string name="max_calories">Max calories</string>
    <string name="add_new_recipe">Add New Recipe</string>
    <string name="chronometer">Chronometer</string>
    <string name="start">Start</string>
    <string name="stop">Stop</string>
    <string name="reset">Reset</string>
    <string name="countdown_timer">Countdown Timer</string>
    <string name="minutes">Minutes</string>
    <string name="seconds">Seconds</string>
    <string name="_00_00">00:00</string>
    <string name="exercise_name">Exercise Name</string>
    <string name="description">Description</string>
    <string name="sets">Sets</string>
    <string name="reps">Reps</string>
    <string name="ingredient_name">Ingredient Name</string>
    <string name="calories_per_100g">Calories per 100g</string>
    <string name="type_e_g_fruit_vegetable">Type (e.g., fruit, vegetable)</string>
</resources>