<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory app:title="@string/general">

        <SwitchPreferenceCompat
            app:key="notifications"
            app:title="@string/enable_notifications"
            app:summary="@string/receive_notifications_about_your_fitness_plan"
            app:defaultValue="true" />

        <ListPreference
            app:key="language"
            app:title="@string/language"
            app:summary="@string/choose_your_preferred_language"
            app:entries="@array/language_entries"
            app:entryValues="@array/language_values"
            app:defaultValue="en" />

        <ListPreference
            app:key="theme"
            app:title="@string/theme"
            app:summary="@string/choose_the_app_theme"
            app:entries="@array/theme_entries"
            app:entryValues="@array/theme_values"
            app:defaultValue="system" />

    </PreferenceCategory>

    <PreferenceCategory app:title="@string/data_management">

        <Preference
            app:key="backup"
            app:title="@string/backup_data"
            app:summary="@string/save_a_copy_of_your_app_data" />

        <Preference
            app:key="restore"
            app:title="@string/restore_data"
            app:summary="@string/restore_your_app_data_from_a_backup" />

    </PreferenceCategory>

</PreferenceScreen>