<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="16dp">

        <EditText
            android:id="@+id/search_edit_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="@string/search_recipes" />

        <EditText
            android:id="@+id/max_calories_edit_text"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:hint="@string/max_calories"
            android:inputType="number" />

    </LinearLayout>

    <Button
        android:id="@+id/add_recipe_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/add_new_recipe"
        android:layout_margin="16dp" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recipes_recycler_view"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" />

</LinearLayout>